# rust-perseus-fontend

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/: global_state.rs  main.rs  models.rs
src/templates/: index.rs  index_back.rs  index_two.rs  indextwo.rs  mod.rs
static/: style.css
