[package]
name = "perseus-website"
version = "0.1.0"
edition = "2021"

[dependencies]
perseus = { version = "=0.4.0-beta.17", features = [ "hydrate" ] }
sycamore = { version = "^0.8.1", features = ["suspense"] }
reqwasm = "0.5.0"
serde = "1.0.147"
# reqwest = {features = ["json"]}
# futures = "0.3"

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-axum = { version = "=0.4.0-beta.17", features = [ "dflt-server" ] }

[target.'cfg(client)'.dependencies]